index.css
.headerContainer{
  background-color: #7E87B2;
  height: 110px;
  display: flex;
}
.title{
  display: flex;
  color: white;
  align-items: center;
  margin-left: 1%;
}
.contentContainer{
  margin:0 2% 0 2%;
}
.boxContainer{
  /*margin-top: 2%;*/
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.box{
  background-color: #7EB0A5;
  margin: 2% 1%;
  height: 250px;
  width: 250px;
  padding:0 50px;

}
.footer{
  display: flex;
  background-color: #E4EFD1;
  height:150px;
  position:fixed;
  right:0;
  left:0;
  bottom:0;
}
.footerContent{
  display: flex;
  color:purple;
  align-items: center;
}

